--- a/portfolio.html
+++ b/portfolio.html
@@ -23,5 +23,14 @@
         </ul>
       </address>
     </header>
+    <section>
+      <ul>
+        <button type="button">All</button>
+        <button type="button">Web Site</button>
+        <button type="button">App</button>
+        <button type="button">Design</button>
+        <button type="button">Marketing</button>
+      </ul>
+    </section>
   </body>
 </html>
