--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,74 @@
         </ul>
       </address>
     </header>
-    <section>
-      <ul>
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
-      </ul>
-    </section>
+    <main>
+      <section>
+        <ul>
+          <button type="button">All</button>
+          <button type="button">Web Site</button>
+          <button type="button">App</button>
+          <button type="button">Design</button>
+          <button type="button">Marketing</button>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/imgbankingapp.jpg" alt="" />
+            <h1>Banking App Interface Concept</h1>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/imgmarketing.jpg" alt="" />
+            <h1>Cashless Payment</h1>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/imgmeditaionapp.jpg" alt="" />
+            <h1>Meditaion App</h1>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/imgtaxi.jpg" alt="" />
+            <h1>Taxi Service</h1>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/imgscreen.jpg" alt="" />
+            <h1>Screen Illustrations</h1>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/imgonlinecourses.jpg" alt="" />
+            <h1>Online Courses</h1>
+            <p>Marketing</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/imgconcept.jpg" alt="" />
+            <h1>Instagram Stories Concept</h1>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/imgfood.jpg" alt="" />
+            <h1>Organic Food</h1>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./images/imgcoffee.jpg" alt="" />
+            <h1>Fresh Coffee</h1>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
