--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -32,51 +39,75 @@
         <button type="button">Marketing</button>
         <ul>
           <li>
-            <img src="./images/imgbankingapp.jpg" alt="" />
+            <img
+              src="./images/imgbankingapp.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+            />
             <h1>Banking App Interface Concept</h1>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/imgmarketing.jpg" alt="" />
+            <img
+              src="./images/imgmarketing.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
             <h1>Cashless Payment</h1>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/imgmeditaionapp.jpg" alt="" />
+            <img
+              src="./images/imgmeditaionapp.jpg"
+              alt="laptop and phone"
+              width="360"
+            />
             <h1>Meditaion App</h1>
             <p>App</p>
           </li>
         </ul>
         <ul>
           <li>
-            <img src="./images/imgtaxi.jpg" alt="" />
+            <img src="./images/imgtaxi.jpg" alt="Taxi" width="360" />
             <h1>Taxi Service</h1>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/imgscreen.jpg" alt="" />
+            <img
+              src="./images/imgscreen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
             <h1>Screen Illustrations</h1>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/imgonlinecourses.jpg" alt="" />
+            <img
+              src="./images/imgonlinecourses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h1>Online Courses</h1>
             <p>Marketing</p>
           </li>
         </ul>
         <ul>
           <li>
-            <img src="./images/imgconcept.jpg" alt="" />
+            <img
+              src="./images/imgconcept.jpg"
+              alt="Instagram Stories"
+              width="360"
+            />
             <h1>Instagram Stories Concept</h1>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/imgfood.jpg" alt="" />
+            <img src="./images/imgfood.jpg" alt="Organic Food" width="360" />
             <h1>Organic Food</h1>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="./images/imgcoffee.jpg" alt="" />
+            <img src="./images/imgcoffee.jpg" alt="Coffee" width="360" />
             <h1>Fresh Coffee</h1>
             <p>Web Site</p>
           </li>
