--- a/index.html
+++ b/index.html
@@ -15,22 +15,32 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="nav">
         <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a class="header-link" href="">Studio</a></li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="">Studio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="address-item">
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
