--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item">
             <a class="nav-link" href="">Studio</a>
@@ -45,45 +45,44 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="Order-Launch">Order Service</button>
       </section>
-      <section>
-        <h2>Company qualiti</h2>
+      <section class="features">
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>What are we doing</h2>
+      <section class="content">
+        <h2 class="content-title">What are we doing</h2>
         <ul>
           <li>
             <img
@@ -104,35 +103,35 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="aside">
+        <h2 class="aside-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="aside-name">Mark Guerrero</h3>
+            <p class="aside-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="aside-name">Tom Ford</h3>
+            <p class="aside-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="aside-name">Camila Garcia</h3>
+            <p class="aside-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="aside-name">Daniel Wilson</h3>
+            <p class="aside-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
