--- a/portfolio.html
+++ b/portfolio.html
@@ -15,37 +15,53 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="nav">
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="">Studio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="address-item">
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
         <ul>
+          <button type="button" class="filter-btn">All</button>
+          <button type="button" class="filter-btn">Web Site</button>
+          <button type="button" class="filter-btn">App</button>
+          <button type="button" class="filter-btn">Design</button>
+          <button type="button" class="filter-btn">Marketing</button>
+        </ul>
+        <ul class="projekt">
           <li>
             <img
               src="./images/imgbankingapp.jpg"
               alt="Banking App Interface Concept"
               width="360"
             />
-            <h1>Banking App Interface Concept</h1>
-            <p>App</p>
+            <h1 class="projekt-title">Banking App Interface Concept</h1>
+            <p class="projekt-text">App</p>
           </li>
           <li>
             <img
@@ -53,8 +69,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h1>Cashless Payment</h1>
-            <p>Marketing</p>
+            <h1 class="projekt-title">Cashless Payment</h1>
+            <p class="projekt-text">Marketing</p>
           </li>
           <li>
             <img
@@ -62,15 +78,15 @@
               alt="laptop and phone"
               width="360"
             />
-            <h1>Meditaion App</h1>
-            <p>App</p>
+            <h1 class="projekt-title">Meditaion App</h1>
+            <p class="projekt-text">App</p>
           </li>
         </ul>
         <ul>
           <li>
             <img src="./images/imgtaxi.jpg" alt="Taxi" width="360" />
-            <h1>Taxi Service</h1>
-            <p>Marketing</p>
+            <h1 class="projekt-title">Taxi Service</h1>
+            <p class="projekt-text">Marketing</p>
           </li>
           <li>
             <img
@@ -78,8 +94,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h1>Screen Illustrations</h1>
-            <p>Design</p>
+            <h1 class="projekt-title">Screen Illustrations</h1>
+            <p class="projekt-text">Design</p>
           </li>
           <li>
             <img
@@ -87,8 +103,8 @@
               alt="Online Courses"
               width="360"
             />
-            <h1>Online Courses</h1>
-            <p>Marketing</p>
+            <h1 class="projekt-title">Online Courses</h1>
+            <p class="projekt-text">Marketing</p>
           </li>
         </ul>
         <ul>
@@ -98,25 +114,25 @@
               alt="Instagram Stories"
               width="360"
             />
-            <h1>Instagram Stories Concept</h1>
-            <p>Design</p>
+            <h1 class="projekt-title">Instagram Stories Concept</h1>
+            <p class="projekt-text">Design</p>
           </li>
           <li>
             <img src="./images/imgfood.jpg" alt="Organic Food" width="360" />
             <h1>Organic Food</h1>
-            <p>Web Site</p>
+            <p class="projekt-text">Web Site</p>
           </li>
           <li>
             <img src="./images/imgcoffee.jpg" alt="Coffee" width="360" />
-            <h1>Fresh Coffee</h1>
-            <p>Web Site</p>
+            <h1 class="projekt-title">Fresh Coffee</h1>
+            <p class="projekt-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
