--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <button type="button" class="Order-Launch">Order Service</button>
       </section>
       <section class="features">
+        <h2>Our strategy</h2>
         <ul>
           <li>
             <h3 class="features-title">Strategy</h3>
@@ -106,22 +107,22 @@
       <section class="aside">
         <h2 class="aside-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="aside-item">
             <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="aside-name">Mark Guerrero</h3>
             <p class="aside-text">Product Designer</p>
           </li>
-          <li>
+          <li class="aside-item">
             <img src="./images/img4.jpg" alt="Tom Ford" width="264" />
             <h3 class="aside-name">Tom Ford</h3>
             <p class="aside-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="aside-item">
             <img src="./images/img5.jpg" alt="Camila Garcia" width="264" />
             <h3 class="aside-name">Camila Garcia</h3>
             <p class="aside-text">Marketing</p>
           </li>
-          <li>
+          <li class="aside-item">
             <img src="./images/img6.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="aside-name">Daniel Wilson</h3>
             <p class="aside-text">UI Designer</p>
