--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <ul class="nav-list">
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <ul class="nav-list list">
           <li class="nav-item">
-            <a class="nav-link" href="">Studio</a>
+            <a class="nav-link link" href="">Studio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="address-list list">
           <li class="address-item">
-            <a class="address-link" href="mailto:info@devstudio.com"
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="address-item">
-            <a class="address-link" href="tel:+110001111111"
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -50,30 +50,30 @@
         <button type="button" class="Order-Launch">Order Service</button>
       </section>
       <section class="features">
-        <h2>Our strategy</h2>
-        <ul>
-          <li>
+        <h2 class="visually-hidden">Our strategy</h2>
+        <ul class="features-list list">
+          <li class="features-item">
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Diligence</h3>
             <p class="features-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Technologies</h3>
             <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
@@ -84,29 +84,29 @@
       </section>
       <section class="content">
         <h2 class="content-title">What are we doing</h2>
-        <ul>
-          <li>
+        <ul class="content-list list">
+          <li class="content-item">
             <img
               src="./images/img1.jpg"
               alt="monitore with graphics"
               width="360"
             />
           </li>
-          <li>
+          <li class="content-item">
             <img
               src="./images/img2.jpg"
               alt="cellphone with 4 displays"
               width="360"
             />
           </li>
-          <li>
+          <li class="content-item">
             <img src="./images/img3.jpg" alt="cellphone" width="360" />
           </li>
         </ul>
       </section>
       <section class="aside">
         <h2 class="aside-title">Our Team</h2>
-        <ul>
+        <ul class="aside-list list">
           <li class="aside-item">
             <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="aside-name">Mark Guerrero</h3>
@@ -131,7 +131,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+      <a href="./index.html" class="footer-logo link">Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
