--- a/portfolio.html
+++ b/portfolio.html
@@ -16,28 +16,28 @@
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-        <ul class="nav-list">
+        <a href="./index.html" class="logo link"><span>Web</span>Studio</a>
+        <ul class="nav-list list">
           <li class="nav-item">
-            <a class="nav-link" href="">Studio</a>
+            <a class="nav-link link" href="">Studio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="address-list list">
           <li class="address-item">
-            <a class="address-link" href="mailto:info@devstudio.com"
+            <a class="address-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="address-item">
-            <a class="address-link" href="tel:+110001111111"
+            <a class="address-link link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -45,16 +45,18 @@
       </address>
     </header>
     <main>
-      <section>
-        <ul>
-          <button type="button" class="filter-btn">All</button>
-          <button type="button" class="filter-btn">Web Site</button>
-          <button type="button" class="filter-btn">App</button>
-          <button type="button" class="filter-btn">Design</button>
-          <button type="button" class="filter-btn">Marketing</button>
+      <section class="filter">
+        <ul class="filter-list list">
+          <li class="filter-item">
+            <button type="button" class="filter-btn">All</button>
+            <button type="button" class="filter-btn">Web Site</button>
+            <button type="button" class="filter-btn">App</button>
+            <button type="button" class="filter-btn">Design</button>
+            <button type="button" class="filter-btn">Marketing</button>
+          </li>
         </ul>
-        <ul class="projekt">
-          <li>
+        <ul class="projekt-list list">
+          <li class="projekt-item">
             <img
               src="./images/imgbankingapp.jpg"
               alt="Banking App Interface Concept"
@@ -63,7 +65,7 @@
             <h1 class="projekt-title">Banking App Interface Concept</h1>
             <p class="projekt-text">App</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img
               src="./images/imgmarketing.jpg"
               alt="Cashless Payment"
@@ -72,7 +74,7 @@
             <h1 class="projekt-title">Cashless Payment</h1>
             <p class="projekt-text">Marketing</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img
               src="./images/imgmeditaionapp.jpg"
               alt="laptop and phone"
@@ -82,13 +84,13 @@
             <p class="projekt-text">App</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="projekt-list list">
+          <li class="projekt-item">
             <img src="./images/imgtaxi.jpg" alt="Taxi" width="360" />
             <h1 class="projekt-title">Taxi Service</h1>
             <p class="projekt-text">Marketing</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img
               src="./images/imgscreen.jpg"
               alt="Screen Illustrations"
@@ -97,7 +99,7 @@
             <h1 class="projekt-title">Screen Illustrations</h1>
             <p class="projekt-text">Design</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img
               src="./images/imgonlinecourses.jpg"
               alt="Online Courses"
@@ -107,8 +109,8 @@
             <p class="projekt-text">Marketing</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="projekt-list list">
+          <li class="projekt-item">
             <img
               src="./images/imgconcept.jpg"
               alt="Instagram Stories"
@@ -117,12 +119,12 @@
             <h1 class="projekt-title">Instagram Stories Concept</h1>
             <p class="projekt-text">Design</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img src="./images/imgfood.jpg" alt="Organic Food" width="360" />
             <h1>Organic Food</h1>
             <p class="projekt-text">Web Site</p>
           </li>
-          <li>
+          <li class="projekt-item">
             <img src="./images/imgcoffee.jpg" alt="Coffee" width="360" />
             <h1 class="projekt-title">Fresh Coffee</h1>
             <p class="projekt-text">Web Site</p>
@@ -131,7 +133,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">Web<span>Studio</span></a>
+      <a href="./index.html" class="footer-logo link">Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
