--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,21 @@
     </header>
     <main>
       <section class="filter">
+        <h1 class="visually-hidden">Filter button</h1>
         <ul class="filter-list list">
           <li class="filter-item">
             <button type="button" class="filter-btn">All</button>
+          </li>
+          <li class="filter-item">
             <button type="button" class="filter-btn">Web Site</button>
+          </li>
+          <li class="filter-item">
             <button type="button" class="filter-btn">App</button>
+          </li>
+          <li class="filter-item">
             <button type="button" class="filter-btn">Design</button>
+          </li>
+          <li class="filter-item">
             <button type="button" class="filter-btn">Marketing</button>
           </li>
         </ul>
@@ -62,7 +71,7 @@
               alt="Banking App Interface Concept"
               width="360"
             />
-            <h1 class="projekt-title">Banking App Interface Concept</h1>
+            <h2 class="projekt-title">Banking App Interface Concept</h2>
             <p class="projekt-text">App</p>
           </li>
           <li class="projekt-item">
@@ -71,7 +80,7 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h1 class="projekt-title">Cashless Payment</h1>
+            <h2 class="projekt-title">Cashless Payment</h2>
             <p class="projekt-text">Marketing</p>
           </li>
           <li class="projekt-item">
@@ -80,14 +89,14 @@
               alt="laptop and phone"
               width="360"
             />
-            <h1 class="projekt-title">Meditaion App</h1>
+            <h2 class="projekt-title">Meditaion App</h2>
             <p class="projekt-text">App</p>
           </li>
         </ul>
         <ul class="projekt-list list">
           <li class="projekt-item">
             <img src="./images/imgtaxi.jpg" alt="Taxi" width="360" />
-            <h1 class="projekt-title">Taxi Service</h1>
+            <h2 class="projekt-title">Taxi Service</h2>
             <p class="projekt-text">Marketing</p>
           </li>
           <li class="projekt-item">
@@ -96,7 +105,7 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h1 class="projekt-title">Screen Illustrations</h1>
+            <h2 class="projekt-title">Screen Illustrations</h2>
             <p class="projekt-text">Design</p>
           </li>
           <li class="projekt-item">
@@ -105,7 +114,7 @@
               alt="Online Courses"
               width="360"
             />
-            <h1 class="projekt-title">Online Courses</h1>
+            <h2 class="projekt-title">Online Courses</h2>
             <p class="projekt-text">Marketing</p>
           </li>
         </ul>
@@ -116,17 +125,17 @@
               alt="Instagram Stories"
               width="360"
             />
-            <h1 class="projekt-title">Instagram Stories Concept</h1>
+            <h2 class="projekt-title">Instagram Stories Concept</h2>
             <p class="projekt-text">Design</p>
           </li>
           <li class="projekt-item">
             <img src="./images/imgfood.jpg" alt="Organic Food" width="360" />
-            <h1>Organic Food</h1>
+            <h2 class="projekt-title">Organic Food</h2>
             <p class="projekt-text">Web Site</p>
           </li>
           <li class="projekt-item">
             <img src="./images/imgcoffee.jpg" alt="Coffee" width="360" />
-            <h1 class="projekt-title">Fresh Coffee</h1>
+            <h2 class="projekt-title">Fresh Coffee</h2>
             <p class="projekt-text">Web Site</p>
           </li>
         </ul>
